fixed nav z-index

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -27,6 +27,7 @@ html {
 nav {
     width: 100%;
     position: fixed;
+    z-index: 10;
 }
 
 #mainDiv {
